# BitcoinWallet

./: .env.example  .gitignore  pyproject.toml
src/: config.py  main.py
src/api/: dependencies.py
src/api/routes/: user.py
src/api/schemas/: user.py
src/core/: constants.py
src/core/domain/interfaces/: api_key_generator.py  user_repository.py
src/core/domain/models/: user.py
src/core/interfaces/: exchange_rate.py  transaction_repository.py  unit_of_work.py  user_repository.py  wallet_repository.py
src/core/models/: transaction.py  wallet.py
src/core/services/: exchange_rate_service.py  statistics_service.py  user_service.py  wallet_service.py
src/core/use_cases/: user_service.py
src/infra/: models.py
src/infra/database/: connection.py  init_db.py  migrate.py  models.py  sqlalchemy_connection.py  sqlalchemy_uow.py
src/infra/repositories/: transaction_repository.py  user_repository.py  wallet_repository.py
src/infra/security/: api_key.py  api_key_generator.py
src/migrations/: 001_init_db.sql  002_create_wallets.sql  003_add_indexes.sql  004_create_transactions.sql
tests/: test_api_key_generator.py  test_in_memory_wallet_repository.py  test_user_service.py  test_wallet.py  test_wallet_repository.py
tests/api/routes/: test_user.py
tests/api/schemas/: test_user_schema.py
tests/unit/: test_transaction.py
tests/unit/services/: test_exchange_rate_service.py  test_statistics_service.py  test_user_service.py  test_wallet_service.py
tests/unit/test_repositories/: test_db_and_migrations.py  test_transaction_repository.py
(+1 files in other folders)
