[project]
name = "bitcoin-wallet"
version = "0.1.0"
description = ""
authors = [
    {name = "sanarskiluka", email = "sanarskiluka2003@gmail.com"},
    {name = "jobavaelene", email = "ejoba22@freeuni.edu.ge"},
    {name = "rezibechvaia", email = "rbech22@freeuni.edu.ge"},
    {name = "nikasardanadze", email = "nsard22@freeuni.edu.ge"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]